added links to container

--- a/index.html
+++ b/index.html
@@ -174,27 +174,27 @@
         <div class="cards">
         <figure class="first_card">
           <img src="images/23CHINAMOON3-threeByTwoSmallAt2X.jpg" alt="other articles in Space and Astronomy">
-          <p>China Launches Moon Mission to Bring Back Lunar Rocks</p>
+          <p><a href="#">China Launches Moon Mission to Bring Back Lunar Rocks</a></p>
         </figure>
         <figure class="second_card">
           <img src="images/19OUTTHERE-ARECIBO1-threeByTwoSmallAt2X-v3.jpg" alt="ther articles in Space and Astronomy">
-          <p>Arecibo Observatory, a Great Eye on the Cosmos, Is Going Dark</p>
+          <p><a href="#">Arecibo Observatory, a Great Eye on the Cosmos, Is Going Dark</a></p>
         </figure>
         <figure class="third_card">
           <img src="images/20SCI-MARS-VOLCANO1-threeByTwoSmallAt2X.jpg" alt="ther articles in Space and Astronomy">
-          <p>Signs of Recent Volcanic Eruption on Mars Hint at Habitats for Life</p>
+          <p><a href="#">Signs of Recent Volcanic Eruption on Mars Hint at Habitats for Life</a></p>
         </figure>
         <figure class="fourth_card">
           <img src="images/merlin_180070305_4ba184d7-2b5e-43a3-a54c-7236af58744d-threeByTwoSmallAt2X.jpg" alt="ther articles in Space and Astronomy">
-          <p>SpaceX’s ‘Resilience’ Lifts 4 Astronauts Into New Era of Spaceflight</p>
+          <p><a href="#">SpaceX’s ‘Resilience’ Lifts 4 Astronauts Into New Era of Spaceflight</a></p>
         </figure>
         <figure class="fifth_card">
           <img src="images/11SCI-BIOMINING-threeByTwoSmallAt2X.jpg" alt="ther articles in Space and Astronomy">
-          <p>These Microbes May Help Future Martians and Moon People Mine Metals</p>
+          <p><a href="#">These Microbes May Help Future Martians and Moon People Mine Metals</a></p>
         </figure>
         <figure class="sixth_card">
           <img src="images/31SCI-ISS-FEATURE13-threeByTwoSmallAt2X.jpg" alt="ther articles in Space and Astronomy">
-          <p>How the Space Station Became a Base to Launch Humanity’s Future</p>
+          <p>How the Space Station Became a Base to Launch Humanity’s Future</a></p>
         </figure>
       </div>
     </div>
@@ -204,27 +204,27 @@
       <div class="cards">
       <figure class="first_card">
         <img src="images/23CHINAMOON3-threeByTwoSmallAt2X.jpg" alt="articles for newsletter">
-        <p>China Launches Moon Mission to Bring Back Lunar Rocks</p>
+        <p><a href="#">China Launches Moon Mission to Bring Back Lunar Rocks</a></p>
       </figure>
       <figure class="second_card">
         <img src="images/19OUTTHERE-ARECIBO1-threeByTwoSmallAt2X-v3.jpg" alt="articles for newsletter">
-        <p>Arecibo Observatory, a Great Eye on the Cosmos, Is Going Dark</p>
+        <p><a href="#">Arecibo Observatory, a Great Eye on the Cosmos, Is Going Dark</a></p>
       </figure>
       <figure class="third_card">
         <img src="images/20SCI-MARS-VOLCANO1-threeByTwoSmallAt2X.jpg" alt="articles for newsletter">
-        <p>Signs of Recent Volcanic Eruption on Mars Hint at Habitats for Life</p>
+        <p><a href="#">Signs of Recent Volcanic Eruption on Mars Hint at Habitats for Life<</a>/p>
       </figure>
       <figure class="fourth_card">
         <img src="images/merlin_180070305_4ba184d7-2b5e-43a3-a54c-7236af58744d-threeByTwoSmallAt2X.jpg" alt="articles for newsletter">
-        <p>SpaceX’s ‘Resilience’ Lifts 4 Astronauts Into New Era of Spaceflight</p>
+        <p><a href="#">SpaceX’s ‘Resilience’ Lifts 4 Astronauts Into New Era of Spaceflight</a></p>
       </figure>
       <figure class="fifth_card">
         <img src="images/11SCI-BIOMINING-threeByTwoSmallAt2X.jpg" alt="articles for newsletter">
-        <p>These Microbes May Help Future Martians and Moon People Mine Metals</p>
+        <p><a href="#">These Microbes May Help Future Martians and Moon People Mine Metals</a></p>
       </figure>
       <figure class="sixth_card">
         <img src="images/31SCI-ISS-FEATURE13-threeByTwoSmallAt2X.jpg" alt="articles for newsletter">
-        <p>How the Space Station Became a Base to Launch Humanity’s Future</p>
+        <p><a href="#">How the Space Station Became a Base to Launch Humanity’s Future</a></p>
       </figure>
     </div>
   </div>
