resolve webhint errors

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         </figure>
         <figure class="sixth_card">
           <img src="images/31SCI-ISS-FEATURE13-threeByTwoSmallAt2X.jpg" alt="ther articles in Space and Astronomy">
-          <p>How the Space Station Became a Base to Launch Humanity’s Future</a></p>
+          <p><a href="#">How the Space Station Became a Base to Launch Humanity’s Future</a></p>
         </figure>
       </div>
     </div>
@@ -212,7 +212,7 @@
       </figure>
       <figure class="third_card">
         <img src="images/20SCI-MARS-VOLCANO1-threeByTwoSmallAt2X.jpg" alt="articles for newsletter">
-        <p><a href="#">Signs of Recent Volcanic Eruption on Mars Hint at Habitats for Life<</a>/p>
+        <p><a href="#">Signs of Recent Volcanic Eruption on Mars Hint at Habitats for Life</a></p>
       </figure>
       <figure class="fourth_card">
         <img src="images/merlin_180070305_4ba184d7-2b5e-43a3-a54c-7236af58744d-threeByTwoSmallAt2X.jpg" alt="articles for newsletter">
