--- a/index.html
+++ b/index.html
@@ -229,6 +229,20 @@
     </div>
   </div>
   <hr>
+  <form action="">
+    <p>Subscribe to our Newsletter</p>
+    <label for="username">Enter Username</label><br><br>
+    <input type="text" minlength="1"  maxlength="20" required class="enter"><br><br>
+     <label for="email">Enter your email</label><br><br>
+     <input type="text" minlength="1" maxlength="20" required class="enter"><br><br>
+     <textarea name="comments" id="comments" cols="45" rows="10"  minlength="1" maxlength="250" placeholder="Type your comment here" required></textarea><br><br>
+     <label for="options">What is your overall opinion about this article?</label>
+     <input type="radio" name="feedback" value="positive">
+     <input type="radio" name="feedback" value="negative">
+     <input type="radio" name="feedback" value="neutral"><br><br>
+     <input type="checkbox"><label for="check">I want to subscribe to the newsletter</label><br><br>
+     <button type="submit">Submit</button>
+    </form>
     <footer>
       <div class="footer_heading">
       <img src="images/logo.png" alt="NewYork Times Logo"><br>
