--- a/index.html
+++ b/index.html
@@ -231,12 +231,12 @@
   <hr>
   <form action="/index.html">
     <p>Subscribe to our Newsletter</p>
-    <label for="username" id="username">Enter Username</label><br><br>
+    <label id="username">Enter Username</label><br><br>
     <input type="text" minlength="1"  maxlength="20" required class="enter"><br><br>
-     <label for="email" id="email">Enter your email</label><br><br>
+     <label id="email">Enter your email</label><br><br>
      <input type="text" minlength="1" maxlength="20" required class="enter"><br><br>
      <textarea name="comments" id="comments" cols="45" rows="10"  minlength="1" maxlength="250" placeholder="Type your comment here" required></textarea><br><br>
-     <label for="options">What is your overall opinion about this article?</label>
+     <label >What is your overall opinion about this article?</label>
      <input type="radio" name="feedback" value="positive">
      <input type="radio" name="feedback" value="negative">
      <input type="radio" name="feedback" value="neutral"><br><br>
